--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body>
   <h1>Happy Birthday Lina</h1>
   <div class="image-container">
-    <img id="startImage" src="https://drive.usercontent.google.com/download?id=11nEtydU8MQzyXJlMyzep4FQwHhk6se0h&export=view&authuser=0" alt="Klick mich!" />
+    <img id="startImage" src="https://drive.google.com/file/d/11nEtydU8MQzyXJlMyzep4FQwHhk6se0h/view?usp=sharing" alt="Klick mich!" />
   </div>
   <video id="video" controls playsinline>
     <source src="https://drive.google.com/uc?export=download&id=11nEtydU8MQzyXJlMyzep4FQwHhk6se0h" type="video/mp4">
