--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body>
   <h1>Happy Birthday Lina</h1>
   <div class="image-container">
-    <img id="startImage" src="file_00000000b718620a9a5dc3970272cd2e (2).png" alt="hier klicken" />
+    <img id="startImage" src="https://github.com/felehn123/Happy-birthday-lina/blob/main/file_00000000b718620a9a5dc3970272cd2e%20(2).png" alt="hier klicken" />
   </div>
   <video id="video" controls playsinline>
     <source src="https://drive.google.com/uc?export=download&id=11nEtydU8MQzyXJlMyzep4FQwHhk6se0h" type="video/mp4">
